# riwau-webserver

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  PROGRESS.md  PROJECT_CONTEXT.md  TODO.md
docs/plans/: 001-project-structure.md  002-http2-http3-roadmap.md  003-proxygen-inspired-pipeline.md  004-sqlite-configuration.md  005-bundled-openssl-tls.md  006-http2-http3-support-system.md  007-async-nonblocking-io.md  008-http1-feature-expansion.md  009-security-tls-hardening.md  010-sni-ipv6-security-header-config.md  011-virtual-host-reverse-proxy-server-side-runtimes.md  012-reverse-proxy-upstream-pools-https-retry.md  013-websocket-reverse-proxy-tunnel.md  014-reverse-proxy-passive-circuit-breaker.md  015-bundled-zlib-sqlite.md  016-bundled-glibc-source-static.md  017-http2-http3-wire-codecs.md  018-http2-h2c-request-serving.md  019-http2-tls-alpn-h2.md  020-modsecurity-owasp-crs-built-in-waf.md  021-ordered-update-checklist.md  022-production-certificate-management.md  023-server-side-runtime-support.md  README.md
include/rimau/core/: config.hpp  logger.hpp  server.hpp  version.hpp
include/rimau/http/: http1_session.hpp  parser.hpp  request.hpp  request_handler.hpp  request_handler_factory.hpp  response.hpp  response_builder.hpp  response_sink.hpp  static_file_handler.hpp  transaction.hpp  virtual_host.hpp  waf.hpp
include/rimau/protocol/: http2_frame.hpp  http2_gateway.hpp  http2_hpack.hpp  http2_session.hpp  http3_frame.hpp  http3_gateway.hpp  protocol.hpp
public/: index.html
scripts/: generate-dev-cert.sh  serve-dev-https.sh  serve-dev.sh  test.sh
src/: main.cpp
src/core/: config.cpp  logger.cpp  server.cpp
src/http/: http1_session.cpp  parser.cpp  response.cpp  response_builder.cpp  response_sink.cpp  static_file_handler.cpp  transaction.cpp  virtual_host.cpp  waf.cpp
src/protocol/: http2_frame.cpp  http2_gateway.cpp  http2_hpack.cpp  http2_session.cpp  http3_frame.cpp  http3_gateway.cpp  protocol.cpp
tests/: test_cli_config.cmake  test_config_database.cpp  test_handler_pipeline.cpp  test_http1_network.py  test_http1_session.cpp  test_http2_h2c_curl.py  test_http2_session.cpp  test_http2_wire.cpp  test_http3_wire.cpp  test_http_fuzz.cpp  test_http_parser.cpp  test_http_response.cpp  test_protocol_capabilities.cpp  test_static_elf.py  test_tls_alpn_h2_curl.py  test_tls_sni_cert_selection.py  test_virtual_host.cpp  test_waf.cpp
